[gd_scene load_steps=57 format=3 uid="uid://dvdorwrrbfuyl"]

[ext_resource type="Script" uid="uid://b2xfi2h0ywwrm" path="res://scenes/mobs/mushroom.gd" id="1_3ua80"]
[ext_resource type="Texture2D" uid="uid://bwl7pula4h733" path="res://assets/Mushroom/Attack.png" id="1_sjuu0"]
[ext_resource type="Texture2D" uid="uid://di7n36k6je2dq" path="res://assets/Mushroom/Take Hit.png" id="2_selrt"]
[ext_resource type="Texture2D" uid="uid://cqenr7qk2l8uk" path="res://assets/Mushroom/Death.png" id="3_ufykn"]
[ext_resource type="Texture2D" uid="uid://cvsubwj76fhd" path="res://assets/Mushroom/Idle.png" id="4_xshu0"]
[ext_resource type="Texture2D" uid="uid://cmlsyrvdeudd1" path="res://assets/Mushroom/Run.png" id="5_3ua80"]
[ext_resource type="PackedScene" uid="uid://dqqfqqv8uix3r" path="res://scenes/damageBox/damage_box.tscn" id="7_ufykn"]
[ext_resource type="Script" uid="uid://byrn78i41df1b" path="res://scenes/damageBox/damage_box.gd" id="7_xshu0"]
[ext_resource type="PackedScene" uid="uid://glkg7hq7itnk" path="res://scenes/mobs/mob_health.tscn" id="8_xshu0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_768lt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_18fl2"]
atlas = ExtResource("1_sjuu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pmuh"]
atlas = ExtResource("1_sjuu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qisqa"]
atlas = ExtResource("1_sjuu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2aqh"]
atlas = ExtResource("1_sjuu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwrmq"]
atlas = ExtResource("1_sjuu0")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n63ap"]
atlas = ExtResource("1_sjuu0")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdset"]
atlas = ExtResource("1_sjuu0")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4do7c"]
atlas = ExtResource("1_sjuu0")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd7ou"]
atlas = ExtResource("2_selrt")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_boqqp"]
atlas = ExtResource("2_selrt")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_042yf"]
atlas = ExtResource("2_selrt")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaqq0"]
atlas = ExtResource("2_selrt")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3cwd"]
atlas = ExtResource("3_ufykn")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s16me"]
atlas = ExtResource("3_ufykn")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_scx5s"]
atlas = ExtResource("3_ufykn")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvb25"]
atlas = ExtResource("3_ufykn")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_21rlh"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq0nx"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oovh"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m46rv"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufykn"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xshu0"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ua80"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_768lt"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq103"]
atlas = ExtResource("4_xshu0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5wbd"]
atlas = ExtResource("4_xshu0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7486l"]
atlas = ExtResource("4_xshu0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumnj"]
atlas = ExtResource("4_xshu0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmmnp"]
atlas = ExtResource("5_3ua80")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8x60"]
atlas = ExtResource("5_3ua80")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf87a"]
atlas = ExtResource("5_3ua80")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb6yt"]
atlas = ExtResource("5_3ua80")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_av1p8"]
atlas = ExtResource("5_3ua80")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_st1g1"]
atlas = ExtResource("5_3ua80")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvy4u"]
atlas = ExtResource("5_3ua80")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2wlo"]
atlas = ExtResource("5_3ua80")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_jq103"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18fl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pmuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qisqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2aqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwrmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n63ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdset")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4do7c")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd7ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boqqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_042yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaqq0")
}],
"loop": false,
"name": &"Damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3cwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s16me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scx5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvb25")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21rlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq0nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oovh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m46rv")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufykn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xshu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ua80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_768lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq103")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5wbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7486l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumnj")
}],
"loop": false,
"name": &"Recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmmnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8x60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf87a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb6yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av1p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st1g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvy4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2wlo")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_l5wbd"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_7486l"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kumnj"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eex22"]
length = 0.571429
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ufykn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a3bwr"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ynu3j"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3bwr"]
_data = {
&"Attack": SubResource("Animation_l5wbd"),
&"Damage": SubResource("Animation_7486l"),
&"Death": SubResource("Animation_kumnj"),
&"Idle": SubResource("Animation_eex22"),
&"RESET": SubResource("Animation_ufykn"),
&"Recover": SubResource("Animation_a3bwr"),
&"Run": SubResource("Animation_ynu3j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_selrt"]
size = Vector2(25, 18)

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_3ua80")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_768lt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_jq103")
animation = &"Attack"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a3bwr")
}
autoplay = "Idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(17.5, 0)
shape = SubResource("RectangleShape2D_selrt")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(17.5, 0)
shape = SubResource("RectangleShape2D_selrt")
disabled = true

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_ufykn")]
script = ExtResource("7_xshu0")

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 64

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(-4, 1)
disabled = false

[node name="MobHealth" parent="." instance=ExtResource("8_xshu0")]
position = Vector2(0, -26)
scale = Vector2(0.15, 0.15)

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="MobHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_received" from="MobHealth" to="." method="_on_mob_health_damage_received"]
[connection signal="no_health" from="MobHealth" to="." method="_on_mob_health_no_health"]

[editable path="AttackDirection/DamageBox"]
